# libertiff

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  demo.cpp  libertiff.hpp
.github/workflows/: build.yml
tests/: CMakeLists.txt  gtest_include.h  tests.cpp
tests/data/: be_bigtiff_strip_single_band.tif  be_strip_single_band.tif  image_description.tif  image_description_one_char.tif  le_bigtiff_strip_single_band.tif  le_strip_single_band.tif  le_strip_three_band_contig.tif  le_strip_three_band_separate.tif  self_cycling.tif  tiled.tif  two_ifds.tif
